[package]
name = "shareit-cli"
version = "0.2.0"
edition = "2018"
authors = ["Artemis <me@arty.li>"]
description = "A command line interface to shareit."
license = "MIT"
readme = "README.md"
repository = "https://github.com/shareit-app/cli"

[[bin]]
name = "shareit"
path = "src/main.rs"

[dependencies]
atty = "0.2"
clap = "3.0.0-beta.4"
copypasta-ext = { version = "0.3.7", features = ["x11-fork"] }
directories-next = "2.0.0"
humantime = "2.1.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
